--- a/README
+++ b/README
@@ -1,10 +1,9 @@
-=====================
-= Multitrack Editor =
-=====================
+== Mewsic Multitrack Editor
  
+This app is part of Mewsic, please see http://github.com/mewsic/mewsic for more details.
+
 Client: Lime5
 Description: The MEWSIC multitrack
 Publisher: Lime5
 Creator: Vaclav Vancura (vaclav@vancura.org)
 Contributor: Marcello Barnaba (vjt@openssl.it)
-Documentation: http://mewsic.stage.lime5.it/rdoc/multitrack-editor
